RESOLVED FIXED75303
REGRESSION (r98196-98236): Incorrect layout of iGoogle with RSS feeds
https://bugs.webkit.org/show_bug.cgi?id=75303
Summary REGRESSION (r98196-98236): Incorrect layout of iGoogle with RSS feeds
Frank Eetgerink
Reported 2011-12-28 03:46:09 PST
The iGoogle page loads the attached gadgets/rss feeds but does not build the page correctly. It stops resizing the page after the first length definition and then squeezes in all the remaining gadgets.
Attachments
the patch (154.02 KB, patch)
2012-01-03 15:46 PST, Filip Pizlo
barraclough: review+
Alexey Proskuryakov
Comment 1 2011-12-28 21:13:53 PST
Are you seeing this in Safari, Chrome, or only in WebKit nightlies from <http://nightly.webkit.org>?
Frank Eetgerink
Comment 2 2011-12-29 02:33:19 PST
Safari and Chrome work just fine. They first draw the correct page size and then fill in the feeds.
Alexey Proskuryakov
Comment 3 2011-12-31 11:43:43 PST
To reproduce, I started with a new iGoogle page, and added a CNN technology news RSS feed. There is a new error in console compared to shipping WebKit: Class$S194: Exception caught: Exception caught: Exception caught: Exception caught: Exception caught: Exception caught: (TypeError) line: 1 sourceId: 140607346329584 sourceURL: http://www.google.nl/ig#t_0: 'undefined' is not an object (evaluating 'this.x.id')
Alexey Proskuryakov
Comment 4 2011-12-31 11:45:17 PST
Alexey Proskuryakov
Comment 5 2012-01-02 23:40:11 PST
This issue doesn't seem to be happening after r103887. I'm not sure whether that fixed the root cause or not.
Filip Pizlo
Comment 6 2012-01-03 15:46:18 PST
Created attachment 121008 [details] the patch
Filip Pizlo
Comment 7 2012-01-03 16:07:33 PST
Note You need to log in before you can comment on or make changes to this bug.