REGRESSION (r98196-98236): Incorrect layout of iGoogle with RSS feeds https://bugs.webkit.org/show_bug.cgi?id=75303 <rdar://problem/10633533>

Source/JavaScriptCore:

Reviewed by Gavin Barraclough.

The this argument was not being kept alive in some cases during inlining and intrinsic
optimizations.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleCall):
(JSC::DFG::ByteCodeParser::emitFunctionCheck):
(JSC::DFG::ByteCodeParser::handleInlining):

LayoutTests:

Reviewed by Gavin Barraclough.

* fast/js/dfg-inline-unused-this-expected.txt: Added.
* fast/js/dfg-inline-unused-this-method-check-expected.txt: Added.
* fast/js/dfg-inline-unused-this-method-check.html: Added.
* fast/js/dfg-inline-unused-this.html: Added.
* fast/js/dfg-intrinsic-unused-this-expected.txt: Added.
* fast/js/dfg-intrinsic-unused-this-method-check-expected.txt: Added.
* fast/js/dfg-intrinsic-unused-this-method-check.html: Added.
* fast/js/dfg-intrinsic-unused-this.html: Added.
* fast/js/script-tests/dfg-inline-unused-this-method-check.js: Added.
(foo):
(bar):
(baz):
* fast/js/script-tests/dfg-inline-unused-this.js: Added.
(foo):
(bar):
(baz):
* fast/js/script-tests/dfg-intrinsic-unused-this-method-check.js: Added.
(bar):
(baz):
* fast/js/script-tests/dfg-intrinsic-unused-this.js: Added.
(bar):
(baz):



Canonical link: https://commits.webkit.org/92271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103981 268f45cc-cd09-0410-ab3c-d52691b4dbfc